2008-07-03  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/ruby/README: Updated build instructions

2008-07-03  Michael Banck  <mbanck@gmx.net>

	* src/CMakelists.txt (LIBRARY_VERSION): New variable.
	* src/CMakelists.txt (BABEL_LIBRARY): Set VERSION property to
	${LIBRARY_VERSION}.
	
2008-07-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/CMakeLists.txt: Update SONAME to 3 for
	version 2.2.0 release.

2008-07-03  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/griddata.h, src/griddata.cpp: Added three new
	getter functions to get the x, y and z axes.

	* src/CMakeLists.txt: Updated to use SONAME 3.

	* include/openbabel/mol.h, src/mol.cpp: Added extra arguments to
	GetMolWt, GetExactMass and GetSpacedFormula to optionally disable
	implicit hydrogens. Defaults to preserve existing behaviour.

	* src/grid.cpp: Fixed the Init function to apply padding correctly.

2008-07-02  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/grid.h, src/grid.cpp: Updated the documentation
	and a few fixes to the function prototypes.

        * include/openbabel/griddata.h, src/griddata.cpp: Updates to the
	documentation, added a GetMaxVector function and made SetLimits const
	fixes for the vector3 form.

	* CMakeLists.txt, src/CMakeLists.txt, src/formats/CMakeLists.txt:
	Reduce the number of version variables floating around to only those
	that are used...

	* CMakeLists.txt, src/formats/CMakeLists.txt: Use a versioned plugin
	directory as autotools does.

2008-07-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/locale.cpp: Add string.h header, from patch by Marcus
	Hufgard. Allows compilation with GCC 4.3.1 on Linux:
	PR#2008642.

	* src/formats/gausszmatformat.cpp: Add definition of
	strcasestr if not defined. Solves compile problems on Cygwin.

	* configure.in, src/config.h.in, configure: Check for
	rpc/xdr.h needed for xtcformat.

	* src/formats/xtcformat.cpp: Use new HAVE_RPC_XDR_H #define.
